finished adding photos for first 3

--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -4,7 +4,7 @@ description: "Custom playable device that responds to both interaction through a
 image: "/projects/becoming/1.jpg"
 tags: ["Arduino", "Processing", "Interactive Art", "Audio Visualization", "Hardware", "Sensors"]
 categories: ["dev", "art"]
-date: "2025-05-01"
+date: "2025-05"
 award: "Performance @ The International Conference on New Interfaces for Musical Expression (NIME)"
 link: "https://youtu.be/WGYg-UNLEUU"
 ---
@@ -38,9 +38,9 @@ link: "https://youtu.be/WGYg-UNLEUU"
 <Section className="mt-20 w-full md:w-[85%] lg:w-[90%] ml-0 md:ml-15 lg:ml-0 text-sm">
   <SplitSection className="my-2 mb-8 gap-2">
     <SectionColumn size={3}>
-      #### Becoming
-      2025
-      <a href="https://nime2025.org/proceedings/183.html" target="_blank" rel="noopener noreferrer">
+      ##### Becoming
+      Audiovisual Installation
+      <a href="https://youtu.be/ksYax6dD-38" target="_blank" rel="noopener noreferrer">
         [View Demo >>]
       </a>
       
@@ -49,8 +49,7 @@ link: "https://youtu.be/WGYg-UNLEUU"
       <ProjectInfoRow
         items={[
           { label: "Materials", values: ["Arduino", "Processing", "Repurposed Hardware", "Sensors"] },
-          { label: "Dimensions", values: ["Artist", "Developer"] },
-          { label: "Category", values: ["Audiovisual Installation"] },
+          { label: "Year", values: ["2025"] },
         ]}
         labelClassName="font-jetbrains-mono font-normal text-muted-foreground uppercase text-xs"
         valuesClassName="text-sm"
@@ -58,14 +57,16 @@ link: "https://youtu.be/WGYg-UNLEUU"
 
       <br/>
 
-      Becoming’ recontextualizes a custom playable device as a living entity that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment. Using adaptive animations and ambient soundscapes, the piece creates a volatile space that evokes thoughts of transformation, growth, and destruction. It tells the story of a machine grappling with fate and embraces human nature through the eyes of something artificial.
-      
+      <i>Becoming</i> recontextualizes a custom playable device as a living entity that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment. Using adaptive animations and ambient soundscapes, the piece creates a volatile space that evokes thoughts of transformation, growth, and destruction. It tells the story of a machine grappling with fate and embraces human nature through the eyes of something artificial.
 
       <div>
         Exhibitions/Performances:
-        <a className="text-xs" href="https://nime2025.org/proceedings/183.html" target="_blank" rel="noopener noreferrer">
-          • 2025 International Conference on New Interfaces for Musical Expression (NIME)
-        </a>
+        <div className="font-semibold">
+          <a href="https://nime2025.org/proceedings/183.html" target="_blank" rel="noopener noreferrer">
+            • 2025 International Conference on New Interfaces for Musical Expression (NIME)
+          </a>
+          <div>• 2025 Purdue Art and Design Juried Undergraduate Exhibition</div>
+        </div>
       </div>
     </SectionColumn>
   </SplitSection>
@@ -73,7 +74,7 @@ link: "https://youtu.be/WGYg-UNLEUU"
 <br/>
 <Section className="mt-20 w-full md:w-[85%] lg:w-[70%] ml-0 md:ml-15 lg:ml-45 text-sm">
   <Section className="w-full flex justify-end text-xs font-medium font-roboto-mono">
-    Graphics projection | 2024
+    Graphics projection | 2025
   </Section>
 
   <MDXMedia 
@@ -192,11 +193,5 @@ link: "https://youtu.be/WGYg-UNLEUU"
   </SplitSection>
 </Section>
 
-
-
-<Section className="mt-20 w-full md:w-[85%] lg:w-[90%] ml-0 md:ml-15 lg:ml-0 text-sm">
-
-  <SplitSection className="text-xs font-mono">
-    Concept → Context → Media
-  </SplitSection>
+<Section className="mt-20">
 </Section>
