finished three more docs

--- a/content/projects/imitation-of-the-pulp.mdx
+++ b/content/projects/imitation-of-the-pulp.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Imitation of the Pulp"
 description: ""
-image: "/projects/pulp/1.png"
+image: "/projects/pulp/fake-closeup.webp"
 tags: ["Interactive Art", "Plants", "Ecosystems"]
 categories: ["art"]
 date: "2024-09"
@@ -43,7 +43,7 @@ link: ""
             />
 
             <br/>
-            "Imitation of the Pulp" is an interactive ecosystem of cyborg plant entities. It reimagines a futuristic ecosystem of invasive hybrid flora that are equal parts machine and fiber.
+            <i>Imitation of the Pulp</i> is an interactive ecosystem of cyborg plant entities. It reimagines a futuristic ecosystem of invasive hybrid flora that are equal parts machine and fiber.
             Each one of these artificial plants is vitally connected to a naturally grown one, leeching off the real plant's energy to power its own rendition. It comes to life through an uncanny imitation of the live plant's body, using an amalgamation of electrical components and plant cuttings. 
             
             As the artificial plant “learns”, it threatens to destroy the original, reminiscent of AI models capable of replicating art, code, and all things human. However, these caricatures are still highly dependent on the original, unable to function otherwise on their own. 
