--- a/content/projects/see-no-evil.mdx
+++ b/content/projects/see-no-evil.mdx
@@ -1,31 +1,31 @@
 ---
-title: "Atrophy: Graveyard of My Fallen Heroes"
+title: "See No Evil"
 description: "Interactive VR environment simulating the decay of the self. Accessible online via web."
-image: "/projects/atrophy/1.png"
-tags: ["VR", "WebVR", "Interactive Art", "3D Graphics", "Immersive Experience", "Creative Coding", "Digital Art"]
+image: "/projects/see-no-evil/sticker-black.webp"
+tags: ["AR", "3D Graphics", "Computer Art", "Interactive Art", "Immersive Experience"]
 categories: ["dev", "art"]
-date: "2023-09"
-link: "https://lilianzlettuce.github.io/ad417/"
+date: "2023-12"
+link: "https://youtu.be/ZVR_eYubK7o"
 ---
 
 <Section className="w-full h-[90vh] flex justify-center items-center">
   <MDXMedia 
-    src="/projects/atrophy/1.png" 
+    src="/projects/see-no-evil/ar-phone-2.webp" 
     alt="Hero" 
     preset="header"
     width={3754}
     height={2835}
     frame="none"
-    className="w-4/5"
+    className="w-1/3"
   />
 </Section>
 
 <Section className="mt-20 w-full md:w-[85%] lg:w-[90%] ml-0 md:ml-15 lg:ml-0 text-sm">
   <SplitSection className="my-2 mb-8 gap-2">
     <SectionColumn size={3}>
-      ##### Atrophy: Graveyard of My Fallen Heroes
-      2024
-      <a href="https://www.youtube.com/watch?v=KCFKR3gY2kk" target="_blank" rel="noopener noreferrer">
+      ##### See No Evil
+      2023
+      <a href="https://youtu.be/ZVR_eYubK7o" target="_blank" rel="noopener noreferrer">
         [View Demo >>]
       </a>
       
@@ -33,9 +33,9 @@ link: "https://lilianzlettuce.github.io/ad417/"
     <SectionColumn size={6} className="h-fit flex flex-col gap-2 text-sm">
       <ProjectInfoRow
         items={[
-          { label: "Materials", values: ["Arduino", "Processing", "Repurposed Hardware", "Sensors"] },
+          { label: "Materials", values: ["Vinyl-printed stickers", "8th Wall", "Processing"] },
           { label: "Dimensions", values: ["Artist", "Developer"] },
-          { label: "Category", values: ["VR Experience"] },
+          { label: "Category", values: ["AR Experience"] },
         ]}
         labelClassName="font-jetbrains-mono font-normal text-muted-foreground uppercase text-xs"
         valuesClassName="text-sm"
@@ -43,8 +43,7 @@ link: "https://lilianzlettuce.github.io/ad417/"
 
       <br/>
 
-      This immersive VR work explores corruption in relation to the human condition with a sort of twisted Hero’s Journey. In the place of a promised destiny, this unwinnable game tells the story of a forsaken belief that does not match reality.
-      The player is immersed in a world featuring vastly contrasting environments, one a post-apocalyptic terrain harboring an ever-growing amalgamation of conflict, the other an artificially picturesque landscape reflective of the idyllic self. They must choose between fighting a battle they cannot win, or submerging themselves within a delusional dream.
+      This augmented reality experience examines the subtle sinister side of technology as an object of worship. It blends reality with our minds’ perception through the use of scannable, code-drawn stickers that can be placed on everyday objects, personal devices, and city infrastructure. The digital artifacts that emerge offer a visual representation of a threat that is otherwise invisible, manifesting into reality both our unavoidable attachment to our devices and the ever-existing potential danger they pose to our privacy.
       
       <div>
         Exhibitions:
@@ -64,32 +63,8 @@ link: "https://lilianzlettuce.github.io/ad417/"
 
   <SplitSection className="my-2 gap-2">
     <MDXMedia 
-      src="/projects/atrophy/1.png" 
-      alt="atrophy img 1" 
-      preset="header"
-      width={3754}
-      height={2835}
-      frame="none"
-      className="w-full"
-    />
-  </SplitSection>
-
-  <SplitSection className="my-2 gap-2">
-    <MDXMedia 
-      src="/projects/atrophy/2.png" 
-      alt="atrophy img 2" 
-      preset="header"
-      width={3754}
-      height={2835}
-      frame="none"
-      className="w-full"
-    />
-  </SplitSection>
-
-  <SplitSection className="my-2 gap-2">
-    <MDXMedia 
-      src="/projects/atrophy/3.png" 
-      alt="atrophy img 3" 
+      src="/projects/see-no-evil/poster.webp" 
+      alt="see-no-evil img 1" 
       preset="header"
       width={3754}
       height={2835}
@@ -101,7 +76,7 @@ link: "https://lilianzlettuce.github.io/ad417/"
   <SplitSection className="my-2 mb-8 gap-2">
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/atrophy/2.png" 
+        src="/projects/see-no-evil/ar-box-1.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -112,7 +87,44 @@ link: "https://lilianzlettuce.github.io/ad417/"
     </SectionColumn>
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/atrophy/3.png" 
+        src="/projects/see-no-evil/ar-eyeballs.webp" 
+        alt="Hero" 
+        preset="header"
+        width={3754}
+        height={2835}
+        frame="none"
+        className="w-full"
+      />
+    </SectionColumn>
+  </SplitSection>
+
+  <SplitSection className="my-2 gap-2">
+    <MDXMedia 
+      src="/projects/see-no-evil/ar-box-2.webp" 
+      alt="see-no-evil img 3" 
+      preset="header"
+      width={3754}
+      height={2835}
+      frame="none"
+      className="w-full"
+    />
+  </SplitSection>
+
+  <SplitSection className="my-2 mb-8 gap-2">
+    <SectionColumn size={6}>
+      <MDXMedia 
+        src="/projects/see-no-evil/ar-phone-1.webp" 
+        alt="Hero" 
+        preset="header"
+        width={3754}
+        height={2835}
+        frame="none"
+        className="w-full"
+      />
+    </SectionColumn>
+    <SectionColumn size={6}>
+      <MDXMedia 
+        src="/projects/see-no-evil/ar-phone-2.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -130,7 +142,7 @@ link: "https://lilianzlettuce.github.io/ad417/"
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={12}>
       <MDXMedia 
-        src="/projects/atrophy/dark1.webp" 
+        src="/projects/see-no-evil/ar-phone-3.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -143,7 +155,7 @@ link: "https://lilianzlettuce.github.io/ad417/"
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/atrophy/dark2.webp" 
+        src="/projects/see-no-evil/ar-web-view.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -154,7 +166,7 @@ link: "https://lilianzlettuce.github.io/ad417/"
     </SectionColumn>
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/atrophy/dark3.webp" 
+        src="/projects/see-no-evil/3d-iso-red.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -165,10 +177,13 @@ link: "https://lilianzlettuce.github.io/ad417/"
     </SectionColumn>
   </SplitSection>
 
+  <Section className="w-full flex justify-end text-xs font-medium font-roboto-mono">
+    Scannable stickers
+  </Section>
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={12}>
       <MDXMedia 
-        src="/projects/atrophy/light1.webp" 
+        src="/projects/see-no-evil/sticker-purple.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -181,7 +196,7 @@ link: "https://lilianzlettuce.github.io/ad417/"
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/atrophy/light2.webp" 
+        src="/projects/see-no-evil/sticker-black.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -192,7 +207,7 @@ link: "https://lilianzlettuce.github.io/ad417/"
     </SectionColumn>
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/atrophy/light3.webp" 
+        src="/projects/see-no-evil/sticker-blue.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -203,10 +218,13 @@ link: "https://lilianzlettuce.github.io/ad417/"
     </SectionColumn>
   </SplitSection>
 
-    <SplitSection className="my-2 gap-2">
+  <Section className="w-full flex justify-end text-xs font-medium font-roboto-mono">
+    3D Models
+  </Section>
+  <SplitSection className="my-2 gap-2">
     <SectionColumn size={12}>
       <MDXMedia 
-        src="/projects/atrophy/above1.webp" 
+        src="/projects/see-no-evil/3d-closeup.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -219,7 +237,7 @@ link: "https://lilianzlettuce.github.io/ad417/"
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/atrophy/above2.webp" 
+        src="/projects/see-no-evil/3d-iso-black.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -230,7 +248,7 @@ link: "https://lilianzlettuce.github.io/ad417/"
     </SectionColumn>
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/atrophy/above3.webp" 
+        src="/projects/see-no-evil/3d-front-black.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
