--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Becoming"
-description: "Custom playable device that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment."
+description: "Audiovisual Installation"
 image: "/projects/becoming/1.jpg"
 tags: ["Arduino", "Processing", "Interactive Art", "Audio Visualization", "Hardware", "Sensors"]
 categories: ["dev", "art"]
