finally finished most of this

--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -2,7 +2,7 @@
 title: "Becoming"
 description: "Audiovisual Installation"
 image: "/projects/becoming/1.jpg"
-tags: ["Arduino", "Processing", "Interactive Art", "Audio Visualization", "Hardware", "Sensors"]
+tags: ["Audio Visualization",  "Arduino", "Processing", "Interactive Art", "Hardware", "Sensors"]
 categories: ["dev", "art"]
 date: "2025-05"
 award: "Performance @ The International Conference on New Interfaces for Musical Expression (NIME)"
