--- a/content/projects/cero.mdx
+++ b/content/projects/cero.mdx
@@ -3,7 +3,7 @@ title: "Cero"
 description: "Adventure/platformer game developed with Javascript using the melonJS game engine."
 image: "/projects/cero/1.png"
 tags: ["JavaScript", "Game Development", "melonJS", "Platformer", "Adventure Game", "Web Games", "2D Graphics"]
-categories: ["dev", "art"]
+categories: ["dev"]
 date: "2021-06-15"
 award: "1st Place @ Hydrangea Hacks"
 link: "https://lilianzlettuce.github.io/cero"
