--- a/content/projects/space-guy.mdx
+++ b/content/projects/space-guy.mdx
@@ -3,7 +3,7 @@ title: "Space Guy"
 description: "2D space-themed platformer created with a team of 5 using Unity."
 image: "/projects/space-guy/2.png"
 tags: ["Unity", "Game Development", "2D Platformer", "C#"]
-categories: ["dev", "art"]
+categories: ["dev"]
 date: "2020-08-15"
 link: ""
 ---
