good enough for now..

--- a/content/projects/ghostwriter.mdx
+++ b/content/projects/ghostwriter.mdx
@@ -1,18 +1,29 @@
 ---
-title: "symphony-128"
+title: "Ghostwriter"
 description: ""
-image: "/projects/symphony-128/long-black-blue-yellow.webp"
-tags: ["Data Visualization", "Computer Art", "Visual Score", "Processing"]
+image: "/projects/ghostwriter/front-view-portrait.webp"
+tags: ["Physical computing", "3D printing", "Arduino", "Motors", "Printing and prototyping", "Sound art"]
 categories: ["dev", "art"]
-date: "2025-02"
-link: "https://youtu.be/ZVR_eYubK7o"
+date: "2025-11"
+link: ""
 ---
 
 <Section className="w-full h-[90vh] flex justify-center items-center">
   <MDXMedia 
+    src="/projects/ghostwriter/front-view-2.webp" 
+    alt="Hero video" 
+    preset="header"
+    width={2560}
+    height={1664}
+    frame="none"
+    className="shadow-lg w-3/5"
+  />
+</Section>
+
+  <MDXMedia 
     isVideo
     loop={false}
-    src="/projects/symphony-128/demo-long.mp4" 
+    src="/projects/ghostwriter/front-view-1.mp4" 
     alt="Hero video" 
     preset="header"
     width={2560}
@@ -20,23 +31,22 @@ link: "https://youtu.be/ZVR_eYubK7o"
     frame="none"
     className="shadow-lg w-4/5"
   />
-</Section>
 
 <Section className="mt-20 w-full md:w-[85%] lg:w-[90%] ml-0 md:ml-15 lg:ml-0 text-sm">
   <SplitSection className="my-2 mb-8 gap-2">
     <SectionColumn size={3}>
-      ##### symphony-128
+      ##### Ghostwriter
       2025
-      <a href="https://lilianzlettuce.github.io/ad334-data-vis/" target="_blank" rel="noopener noreferrer">
-        [View Live Site >>]
+      <a href="" target="_blank" rel="noopener noreferrer">
+        [View Demo >>]
       </a>
       
     </SectionColumn>
     <SectionColumn size={6} className="h-fit flex flex-col gap-2 text-sm">
       <ProjectInfoRow
         items={[
-          { label: "Materials", values: ["Self-collected data", "p5.js", "Python"] },
-          { label: "Category", values: ["Data Visualization"] },
+          { label: "Materials", values: ["Sears the Scholar electric typewriter", "Servo motors", "Arduino", "3D printed mechanical parts"] },
+          { label: "Category", values: ["Interactive Installation"] },
         ]}
         labelClassName="font-jetbrains-mono font-normal text-muted-foreground uppercase text-xs"
         valuesClassName="text-sm"
@@ -44,8 +54,9 @@ link: "https://youtu.be/ZVR_eYubK7o"
 
       <br/>
 
-      This augmented reality experience examines the subtle sinister side of technology as an object of worship. It blends reality with our minds’ perception through the use of scannable, code-drawn stickers that can be placed on everyday objects, personal devices, and city infrastructure. The digital artifacts that emerge offer a visual representation of a threat that is otherwise invisible, manifesting into reality both our unavoidable attachment to our devices and the ever-existing potential danger they pose to our privacy.
-      
+      TBD: Project involves automating a typewriter to be interactive through voice transcription. The typewriter will be programmed to output a specific text/ascii image, which viewers will have the power to interrupt. 
+      Drawing/reflecting on the history the typewriter, its role in giving women more freedom, as a medium for communication outside of the patriarchy's sphere of influence, a medium for making art and political statement.
+      Making modern connections to technological influences, data, censorship, the age of misinformation.
     </SectionColumn>
   </SplitSection>
 </Section>
@@ -57,8 +68,8 @@ link: "https://youtu.be/ZVR_eYubK7o"
 
   <SplitSection className="my-2 gap-2">
     <MDXMedia 
-      src="/projects/symphony-128/long-black-blue-yellow.webp" 
-      alt="symphony-128 img 1" 
+      src="/projects/ghostwriter/long-black-blue-yellow.webp" 
+      alt="ghostwriter img 1" 
       preset="header"
       width={3754}
       height={2835}
@@ -70,7 +81,7 @@ link: "https://youtu.be/ZVR_eYubK7o"
   <SplitSection className="my-2 mb-8 gap-2">
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/symphony-128/black-pink-yellow.webp" 
+        src="/projects/ghostwriter/black-pink-yellow.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -81,7 +92,7 @@ link: "https://youtu.be/ZVR_eYubK7o"
     </SectionColumn>
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/symphony-128/red-cyan.webp" 
+        src="/projects/ghostwriter/red-cyan.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -94,8 +105,8 @@ link: "https://youtu.be/ZVR_eYubK7o"
 
   <SplitSection className="my-2 gap-2">
     <MDXMedia 
-      src="/projects/symphony-128/long-white-black.webp" 
-      alt="symphony-128 img 3" 
+      src="/projects/ghostwriter/long-white-black.webp" 
+      alt="ghostwriter img 3" 
       preset="header"
       width={3754}
       height={2835}
@@ -107,7 +118,7 @@ link: "https://youtu.be/ZVR_eYubK7o"
   <SplitSection className="my-2 mb-8 gap-2">
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/symphony-128/black-white.webp" 
+        src="/projects/ghostwriter/black-white.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -118,7 +129,7 @@ link: "https://youtu.be/ZVR_eYubK7o"
     </SectionColumn>
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/symphony-128/gray-black.webp" 
+        src="/projects/ghostwriter/gray-black.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -136,7 +147,7 @@ link: "https://youtu.be/ZVR_eYubK7o"
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={12}>
       <MDXMedia 
-        src="/projects/symphony-128/black-blue-yellow-large-labels.webp" 
+        src="/projects/ghostwriter/black-blue-yellow-large-labels.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -149,7 +160,7 @@ link: "https://youtu.be/ZVR_eYubK7o"
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/symphony-128/ar-web-view.webp" 
+        src="/projects/ghostwriter/ar-web-view.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -160,7 +171,7 @@ link: "https://youtu.be/ZVR_eYubK7o"
     </SectionColumn>
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/symphony-128/3d-iso-red.webp" 
+        src="/projects/ghostwriter/3d-iso-red.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -177,7 +188,7 @@ link: "https://youtu.be/ZVR_eYubK7o"
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={12}>
       <MDXMedia 
-        src="/projects/symphony-128/sticker-purple.webp" 
+        src="/projects/ghostwriter/sticker-purple.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -190,7 +201,7 @@ link: "https://youtu.be/ZVR_eYubK7o"
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/symphony-128/sticker-black.webp" 
+        src="/projects/ghostwriter/sticker-black.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -201,7 +212,7 @@ link: "https://youtu.be/ZVR_eYubK7o"
     </SectionColumn>
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/symphony-128/sticker-blue.webp" 
+        src="/projects/ghostwriter/sticker-blue.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -218,7 +229,7 @@ link: "https://youtu.be/ZVR_eYubK7o"
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={12}>
       <MDXMedia 
-        src="/projects/symphony-128/3d-closeup.webp" 
+        src="/projects/ghostwriter/3d-closeup.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -231,7 +242,7 @@ link: "https://youtu.be/ZVR_eYubK7o"
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/symphony-128/3d-iso-black.webp" 
+        src="/projects/ghostwriter/3d-iso-black.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -242,7 +253,7 @@ link: "https://youtu.be/ZVR_eYubK7o"
     </SectionColumn>
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/symphony-128/3d-front-black.webp" 
+        src="/projects/ghostwriter/3d-front-black.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
