--- a/content/projects/sea-unearthed.mdx
+++ b/content/projects/sea-unearthed.mdx
@@ -1,6 +1,6 @@
 ---
 title: "The Sea Unearthed"
-description: "Interactive VR environment simulating the decay of the self. Accessible online via web."
+description: ""
 image: "/projects/sea-unearthed/hallway-square-2.webp"
 tags: ["Soundscape", "Sonic Intervention"]
 categories: ["art"]
@@ -62,18 +62,6 @@ link: "https://youtu.be/JFFB1OnIGCE"
   <Section className="mt-6 w-full flex justify-end text-xs font-medium font-roboto-mono">
     Images of the space
   </Section>
-
-  <SplitSection className="mb-2 gap-2">
-    <MDXMedia 
-      src="/projects/sea-unearthed/bathroom.webp" 
-      alt="sea-unearthed img 1" 
-      preset="header"
-      width={3754}
-      height={2835}
-      frame="none"
-      className="w-full"
-    />
-  </SplitSection>
 
   <SplitSection className="my-2 mb-8 gap-2">
     <SectionColumn size={6}>
@@ -153,7 +141,7 @@ link: "https://youtu.be/JFFB1OnIGCE"
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={6}>
       <MDXMedia 
-        src="/projects/sea-unearthed/hallway-square-1.webp" 
+        src="/projects/sea-unearthed/caution-sign.webp" 
         alt="Hero" 
         preset="header"
         width={3754}
@@ -175,9 +163,6 @@ link: "https://youtu.be/JFFB1OnIGCE"
     </SectionColumn>
   </SplitSection>
 
-  <Section className="w-full flex justify-end text-xs font-medium font-roboto-mono">
-    Scannable stickers
-  </Section>
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={12}>
       <MDXMedia 
@@ -191,34 +176,10 @@ link: "https://youtu.be/JFFB1OnIGCE"
       />
     </SectionColumn>
   </SplitSection>
-  <SplitSection className="my-2 gap-2">
-    <SectionColumn size={6}>
-      <MDXMedia 
-        src="/projects/sea-unearthed/hallway.webp" 
-        alt="Hero" 
-        preset="header"
-        width={3754}
-        height={2835}
-        frame="none"
-        className="w-full"
-      />
-    </SectionColumn>
-    <SectionColumn size={6}>
-      <MDXMedia 
-        src="/projects/sea-unearthed/caution-sign.webp" 
-        alt="Hero" 
-        preset="header"
-        width={3754}
-        height={2835}
-        frame="none"
-        className="w-full"
-      />
-    </SectionColumn>
-  </SplitSection>
-
   <Section className="w-full flex justify-end text-xs font-medium font-roboto-mono">
-    3D Models
+    Image by Purdue University
   </Section>
+
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={12}>
       <MDXMedia 
@@ -232,6 +193,10 @@ link: "https://youtu.be/JFFB1OnIGCE"
       />
     </SectionColumn>
   </SplitSection>
+  <Section className="w-full flex justify-end text-xs font-medium font-roboto-mono">
+    Image by Purdue University
+  </Section>
+
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={6}>
       <MDXMedia 
