work page layout changes, added another project

--- a/content/projects/ghostwriter.mdx
+++ b/content/projects/ghostwriter.mdx
@@ -3,7 +3,7 @@ title: "Ghostwriter"
 description: ""
 image: "/projects/ghostwriter/front-view-portrait.webp"
 tags: ["Physical computing", "3D printing", "Arduino", "Motors", "Printing and prototyping", "Sound art"]
-categories: ["dev", "art"]
+categories: ["art"]
 date: "2025-11"
 link: ""
 ---
