--- a/content/projects/see-no-evil.mdx
+++ b/content/projects/see-no-evil.mdx
@@ -3,7 +3,7 @@ title: "See No Evil"
 description: "Interactive VR environment simulating the decay of the self. Accessible online via web."
 image: "/projects/see-no-evil/sticker-black.webp"
 tags: ["AR", "3D Graphics", "Computer Art", "Interactive Art", "Immersive Experience"]
-categories: ["dev", "art"]
+categories: ["art"]
 date: "2023-12"
 link: "https://youtu.be/ZVR_eYubK7o"
 ---
