fixed minor page layouts for pulp and ev

--- a/content/projects/imitation-of-the-pulp.mdx
+++ b/content/projects/imitation-of-the-pulp.mdx
@@ -68,6 +68,18 @@ link: ""
 
     <SplitSection className="my-2 gap-2">
         <MDXMedia 
+            src="/projects/pulp/both-front-2.webp" 
+            alt="Hero" 
+            preset="header"
+            width={3754}
+            height={2835}
+            frame="none"
+            className="w-full"
+        />
+    </SplitSection>
+
+    <SplitSection className="my-2 gap-2">
+        <MDXMedia 
             src="/projects/pulp/both-back.webp" 
             alt="pulp img 3" 
             preset="header"
@@ -169,28 +181,15 @@ link: ""
         </SectionColumn>
     </SplitSection>
     <SplitSection className="my-2 gap-2">
-        <SectionColumn size={6}>
-            <MDXMedia 
-                src="/projects/pulp/fake-top.webp" 
-                alt="Hero" 
-                preset="header"
-                width={3754}
-                height={2835}
-                frame="none"
-                className="w-full"
-            />
-        </SectionColumn>
-        <SectionColumn size={6}>
-            <MDXMedia 
-                src="/projects/pulp/both-front-2.webp" 
-                alt="Hero" 
-                preset="header"
-                width={3754}
-                height={2835}
-                frame="none"
-                className="w-full"
-            />
-        </SectionColumn>
+        <MDXMedia 
+            src="/projects/pulp/fake-top.webp" 
+            alt="Hero" 
+            preset="header"
+            width={3754}
+            height={2835}
+            frame="none"
+            className="w-full"
+        />
     </SplitSection>
 </Section>
 
