updated sym128 description

--- a/content/projects/symphony-128.mdx
+++ b/content/projects/symphony-128.mdx
@@ -44,8 +44,8 @@ link: "https://youtu.be/ZVR_eYubK7o"
 
       <br/>
 
-      This augmented reality experience examines the subtle sinister side of technology as an object of worship. It blends reality with our minds’ perception through the use of scannable, code-drawn stickers that can be placed on everyday objects, personal devices, and city infrastructure. The digital artifacts that emerge offer a visual representation of a threat that is otherwise invisible, manifesting into reality both our unavoidable attachment to our devices and the ever-existing potential danger they pose to our privacy.
-      
+      This work utilizes self-collected social interaction data to examine the liberating yet objectifying effect of modern day communication technology on social connection. The temporal evolution of the data directly influences a dynamic rendering derived from its features (such as timestamp, duration, and in-person vs online interaction). Although these features are initially easily recognizable, the algorithm manipulates the visualization until it is no longer human-readable. The resulting images create a warped, artificial representation of something inherently human, mirroring the nature of online spaces. 
+    
     </SectionColumn>
   </SplitSection>
 </Section>
