fixed two video heroes

--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -17,9 +17,10 @@ link: "https://youtu.be/WGYg-UNLEUU"
     alt="Hero video" 
     preset="header"
     width={2560}
-    height={1664}
+    height={1600}
     frame="none"
     className="shadow-lg w-4/5"
+    baseImageClassName="aspect-256/152"
   />
 </Section>
 
