--- a/content/projects/symphony-128.mdx
+++ b/content/projects/symphony-128.mdx
@@ -12,13 +12,14 @@ link: "https://youtu.be/ZVR_eYubK7o"
   <MDXMedia 
     isVideo
     loop={false}
-    src="/projects/symphony-128/demo-long.mp4" 
+    src="/projects/symphony-128/demo-longer.mp4" 
     alt="Hero video" 
     preset="header"
     width={2560}
     height={1664}
     frame="none"
     className="shadow-lg w-4/5"
+    baseImageClassName=""
   />
 </Section>
 
