added video hero for sne

--- a/content/projects/see-no-evil.mdx
+++ b/content/projects/see-no-evil.mdx
@@ -10,13 +10,16 @@ link: "https://youtu.be/ZVR_eYubK7o"
 
 <Section className="w-full h-[90vh] flex justify-center items-center">
   <MDXMedia 
-    src="/projects/see-no-evil/sticker-black.webp" 
+    isVideo
+    loop
+    src="/projects/see-no-evil/ar-short-1.mp4" 
     alt="Hero" 
     preset="header"
     width={3754}
     height={2835}
     frame="none"
     className="w-1/3"
+    baseImageClassName="aspect-886/1470"
   />
 </Section>
 
