fix navlink work all filter external link issue

--- a/content/projects/becoming-dev.mdx
+++ b/content/projects/becoming-dev.mdx
@@ -3,7 +3,7 @@ title: "Becoming - temp"
 description: "Custom playable device that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment."
 image: "/projects/becoming/1.jpg"
 tags: ["Arduino", "Processing", "Interactive Art", "Audio Visualization", "Hardware", "Sensors"]
-categories: [""]
+categories: []
 date: "2025-05-01"
 award: "Performance @ The International Conference on New Interfaces for Musical Expression (NIME)"
 link: "https://youtu.be/WGYg-UNLEUU"
