--- a/content/projects/spill-ticket-customization.mdx
+++ b/content/projects/spill-ticket-customization.mdx
@@ -1,8 +1,8 @@
 ---
-title: "spill ticket customization"
-description: "Ticket customization page for spill, Purdue Hackers' 2025 show."
+title: "Spill Ticket Customization"
+description: "Ticket customization page for spill, a Purdue Hackers show."
 image: "/projects/spill/preview-1.png"
-tags: ["Next.js", "React", "Student Organization", "Landing Page", "Web Development"]
+tags: ["Next.js", "React", "Web Development"]
 categories: ["dev", "design"]
 date: "2022-12-01"
 link: "https://www.purduehackers.com/"
@@ -19,7 +19,7 @@ link: "https://www.purduehackers.com/"
 />
 
 <ProjectHeader
-  title="Purdue Hackers - Landing Page"
+  title=""
   description="Landing site for Purdue Hackers, showcasing mission, events, and community."
 >
   <ProjectInfo
